# starwars-through-spyglass

./: .gitignore  README.md  pyproject.toml
starwars_through_spyglass/: main.py
tests/: test_main.py
