[tool.poetry]
name = "starwars-through-spyglass"
version = "0.1.0"
description = ""
authors = ["amalokin3 <amalokin@gmail.com>"]
readme = "README.md"
packages = [{include = "starwars_through_spyglass"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
